objects/nFUSE__Transaction_Log__c.object
<CustomObject>
    <description>Log for transaction messages</description>
    <fields>
        <fullName>nFUSE__Action__c</fullName>
        <description>Required text that indicates the business process for which this Transaction Log was created.</description>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Api_Version__c</fullName>
        <description>A required field indicating the major and minor version of the API in use by the middleware.</description>
        <label>API_Version</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__App_Plugin__c</fullName>
        <description>A required field indicating the service provider being utilized during this Transaction.</description>
        <label>App Plugin</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Comments__c</fullName>
        <description>An optional field recording the latest business process comments about this Transaction. Max 255 characters.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creation_DateTime__c</fullName>
        <description>This optional field displays the Date and Time of when the vendor&apos;s record was created.</description>
        <inlineHelpText>This optional field displays the Date and Time of when the vendor&apos;s record was created.</inlineHelpText>
        <label>Creation DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFUSE__External_Id__c</fullName>
        <description>A required field that uniquely identifiable string used for referencing this Transaction inside and outside of the nCino platform.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFUSE__Log_Type__c</fullName>
        <description>An optional field used to create categories of logs specific to product implementation.</description>
        <label>Log Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Object_Id__c</fullName>
        <description>--DEPRECATED-- Now using Primary_Object_Id__c.</description>
        <label>-D Object Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Primary_Object_Id__c</fullName>
        <description>A required unique object identifier used to create a soft reference to an object that is related to the Transaction Log as the primary focus.</description>
        <externalId>true</externalId>
        <label>Primary Object Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Requested_By_User_Id__c</fullName>
        <description>The required identifier indicating the User that initiatied this Transaction.</description>
        <externalId>true</externalId>
        <label>RequestingUserId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Requesting_User_Id__c</fullName>
        <description>--DEPRECATED-- Now using Requested_By_User_Id__c.</description>
        <label>-D RequestingUserId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Response_Time__c</fullName>
        <description>Date/Time for receiving the response message from the middlware.</description>
        <label>ResponseTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFUSE__Secondary_Object_Id__c</fullName>
        <description>A unique object identifier used to create a soft reference to an object that is related to the Transaction Log in addition to the required Object Id field.</description>
        <externalId>true</externalId>
        <label>Secondary Object Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Sent_Time__c</fullName>
        <description>Date/Time that the request message was sent to the middleware.</description>
        <label>SentTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Detail__c</fullName>
        <description>A optional field containing a detailed message of the latest response from the middleware.</description>
        <label>TransactionDetail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Status__c</fullName>
        <description>A required field indicating the latest status of this Transaction through a process.</description>
        <label>TransactionStatus</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Vendor_Status__c</fullName>
        <description>An optional field from the service provider communicated through the middleware indicating the status of this Transaction in their system.</description>
        <label>Vendor Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>